# AbstractionLayer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cc32xx.cmake  darwin.cmake  esp.cmake  linux.cmake  raspbian12.cmake  raspbian12Pi4ModelB.cmake  rpi4ModelB.cmake  targetPlatform.cmake  tm4c123.cmake
AbstractionLayerTesting/Example/: ExampleTest.cpp
AbstractionLayerTesting/Ip/: IpTest.cpp
AbstractionLayerTesting/OperatingSystem/: OperatingSystemTest.cpp
AbstractionLayerTesting/Storage/: StorageTest.cpp
Abstractions/: README.md
Abstractions/Cryptography/: CryptographyAbstraction.hpp
Abstractions/Hardware/: AdcAbstraction.hpp  CMakeLists.txt  DarlingtonArrayAbstraction.hpp  GpioAbstraction.hpp  GptmAbstraction.hpp  GptmCaptureAbstraction.hpp  GptmPwmAbstraction.hpp  GptmTimerAbstraction.hpp  HBridge.hpp  HBridgeAbstraction.hpp  I2cAbstraction.hpp  PowerAndClockManagementAbstraction.hpp  PowerResetClockManagementAbstraction.hpp  PwmAbstraction.hpp  RtcAbstraction.hpp  SpiAbstraction.hpp  UartAbstraction.hpp  WatchdogAbstraction.hpp
Abstractions/Http/: CMakeLists.txt  HttpClientAbstraction.hpp  HttpServerAbstraction.hpp  HttpTypes.hpp
Abstractions/Ip/: CMakeLists.txt  HttpClientAbstraction.hpp  HttpServerAbstraction.hpp  HttpTypes.hpp  IpClientAbstraction.hpp  IpServerAbstraction.hpp  IpTypes.hpp
Abstractions/Logging/: LoggingAbstraction.hpp
Abstractions/MachineLearning/: CMakeLists.txt  InferenceAbstraction.hpp
Abstractions/Network/: CMakeLists.txt  CellularAbstraction.hpp  NetworkAbstraction.hpp  NetworkTypes.hpp  WifiAbstraction.hpp
Abstractions/OperatingSystem/: CMakeLists.txt  OperatingSystemAbstraction.hpp  OperatingSystemTypes.hpp
Abstractions/Processor/: CMakeLists.txt  ProcessorAbstraction.hpp
Abstractions/Protocols/: CMakeLists.txt  CommunicationProtocol.hpp  IcCommunicationProtocol.hpp
Abstractions/Serialization/: SerializationAbstraction.hpp
Abstractions/Storage/: CMakeLists.txt  FileAbstraction.hpp  FileSystemAbstraction.hpp  StorageAbstraction.hpp
Applications/: README.md
Applications/ChainOfResponsibility/: CMakeLists.txt  ChainOfResponsibility.cpp  ChainOfResponsibility.hpp  CommandObject.cpp  CommandObject.hpp
Applications/CommandQueue/: CMakeLists.txt  CommandQueue.hpp
Applications/Event/: CMakeLists.txt  EventQueue.cpp  EventQueue.hpp
Applications/Factories/: CMakeLists.txt  DarlingtonArrayFactory.hpp  HBridgeFactory.hpp  IcCommFactory.hpp  IpFactory.hpp  LcdFactory.hpp  NetworkFactory.hpp
Applications/IntegratedCircuits/DarlingtonArray/: CMakeLists.txt  DarlingtonArrayAbstraction.hpp
Applications/IntegratedCircuits/DarlingtonArray/StmUln2003/: StmUln2003.cpp  StmUln2003.hpp
Applications/IntegratedCircuits/HBridge/: CMakeLists.txt  HBridgeAbstraction.hpp
Applications/IntegratedCircuits/HBridge/TiDrv8872/: TiDrv8872.cpp  TiDrv8872.hpp
Applications/IntegratedCircuits/Lcd/: CMakeLists.txt  LcdAbstraction.hpp
Applications/IntegratedCircuits/Lcd/Bridgetek/: Bridgetek81x.cpp  Bridgetek81x.hpp  Bridgetek81xTypes.hpp
Applications/IntegratedCircuits/Lcd/MatrixOrbital/: Eve3Tft3_5Inch.cpp  Eve3Tft3_5Inch.hpp
Applications/IntegratedCircuits/Lcd/Riverdi/: Eve3Tft3_5Inch.cpp  Eve3Tft3_5Inch.hpp
Applications/IntegratedCircuits/Rtc/: CMakeLists.txt
Applications/IntegratedCircuits/Rtc/NxpPcf8506a/: Nxppcf8506aModule.cpp  Nxppcf8506aModule.hpp
Applications/IpClient/: CMakeLists.txt  IpClient.cpp  IpClient.hpp
Applications/IpServer/: CMakeLists.txt  IpServer.cpp  IpServer.hpp
Applications/Logging/: CMakeLists.txt  Log.hpp  StatusLogger.cpp  StatusLogger.hpp
Applications/MbedTlsCompatibility/: CMakeLists.txt  MbedTlsSendReceive.cpp  MbedTlsSendReceive.hpp  README.md  SendReceive.cpp  SendReceive.hpp
Applications/MemoryPool/: CMakeLists.txt  MemoryPool.hpp
Applications/NtpClient/: CMakeLists.txt  NtpClient.cpp  NtpClient.hpp
Applications/PidController/: PidController.cpp  PidController.hpp
Applications/RtcManager/: CMakeLists.txt  RtcManager.cpp  RtcManager.hpp
Applications/SignalsAndSlots/: CMakeLists.txt  SignalsAndSlots.cpp  SignalsAndSlots.hpp
Applications/TickTimer/: CMakeLists.txt  TickTimer.hpp
Doxygen/: Doxyfile
Doxygen/html/: annotated.html
Modules/: README.md
Modules/Cryptography/Darwin/: CMakeLists.txt  CryptographyModule.cpp  CryptographyModule.hpp
Modules/Cryptography/Esp/: CMakeLists.txt  CryptographyModule.cpp  CryptographyModule.hpp
Modules/Cryptography/Linux/: CMakeLists.txt  CryptographyModule.cpp  CryptographyModule.hpp
Modules/Cryptography/None/: CMakeLists.txt  CryptographyModule.cpp  CryptographyModule.hpp
Modules/Error/Cc32xx/: CMakeLists.txt  ErrorModule.cpp
Modules/Error/Errno/: CMakeLists.txt  ErrorModule.cpp
Modules/Error/Esp/: CMakeLists.txt  ErrorModule.cpp
Modules/Error/None/: CMakeLists.txt  ErrorModule.cpp
Modules/Http/Cc32xx/: CMakeLists.txt  HttpClientModule.hpp  HttpServerModule.hpp  HttpsClientModule.cpp  HttpsClientModule.hpp
Modules/Http/Esp/: CMakeLists.txt  HttpClientModule.cpp  HttpClientModule.hpp  HttpServerModule.cpp  HttpsClientModule.cpp  HttpsClientModule.hpp
Modules/Http/None/: CMakeLists.txt  HttpServerModule.hpp  HttpsClientModule.hpp
Modules/Http/Posix/: CMakeLists.txt  HttpClientModule.cpp  HttpClientModule.hpp  HttpServerModule.cpp  HttpServerModule.hpp  HttpsClientModule.cpp  HttpsClientModule.hpp  MbedTlsCompatibility
Modules/IntegratedCircuits/NxPPcf85063a/: CMakeLists.txt  Nxppcf8506aModule.cpp  Nxppcf8506aModule.hpp  RtcModule.cpp  RtcModule.hpp
Modules/Ip/Cc32xx/: CMakeLists.txt  HttpClientModule.cpp  HttpServerModule.cpp  HttpServerModule.hpp  HttpsClientModule.cpp  HttpsClientModule.hpp  IpClientModule.cpp  IpClientModule.hpp  IpServerModule.cpp  IpServerModule.hpp
Modules/Ip/Esp/: CMakeLists.txt  HttpClientModule.cpp  HttpClientModule.hpp  HttpServerModule.cpp  HttpServerModule.hpp  (+6 more)
Utilities/: Algorithm.hpp  CMakeLists.txt  CheckStaticStringSizes.py  ComputerVision.hpp  Error.hpp  Global.hpp  Math.hpp  StaticString.hpp  StaticStringConfig.h  Types.hpp
Utilities/MbedTls/: CMakeLists.txt
(+321 files in other folders)
